# wslpluginapi-sys

./: .gitignore  Cargo.toml  LICENSE  README.MD  THIRD-PARTY-NOTICES.md  build.rs
.github/workflows/: ci.yml  deploy.yml  release-and-deploy.yml  release-checks.yml  release-tag.yml
src/: bindgen.rs  manual.rs
wslpluginapi-sys/: Cargo.toml  THIRD-PARTY-NOTICES.md  build.rs
wslpluginapi-sys/src/: bindgen.rs  lib.rs
xtask/: Cargo.toml  build.rs
xtask/src/: header_processing.rs  licence_definition.rs  main.rs  metadata.rs  nuget.rs  nuspec.rs
xtask/src/third_pary_management/: mod.rs
xtask/src/third_pary_management/notice/: mod.rs  notice_generation.rs  third_party_notice.rs  third_party_notice_item.rs
xtask/src/third_pary_mangement/: distributed_file.rs
xtask/src/third_pary_mangement/notice/: third_party_notice.rs  third_party_notice_item.rs  third_party_notice_package.rs
