[package]
name = "wslpluginapi-sys"
version = "0.1.0-beta.1.1+2.1.3"
edition = "2021"
readme = "README.md"
authors = ["Mickaël Véril <mika.veril@wanadoo.fr>"]
description = "Rust bindings for the WSL Plugin API"
license = "MIT"
repository = "https://github.com/mveril/wslpluginapi-sys"
keywords = ["wsl", "plugin", "windows", "linux", "ffi"]
categories = ["os::windows-apis", "external-ffi-bindings", "virtualization"]


[features]
hooks-field-names = ["dep:struct-field-names-as-array"]
no-nuget = ["dep:zip", "dep:reqwest", "dep:tempfile"]

[build-dependencies]
zip = { version = "2.2", optional = true }
tempfile = { version = "3.16", optional = true }
reqwest = { version = "0.12", optional = true, features = ["blocking"] }
semver = { version = "1.0" }
bindgen = "0.71"
cfg-if = "1.0"


[dependencies]
libc = "0.2"
struct-field-names-as-array = { version = "0.3", features = [
  "derive",
], optional = true }

[dependencies.windows]
version = ">0.32"
features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Diagnostics_Debug",
  "Win32_Networking_WinSock",
]

[package.metadata.docs.rs]
all-features = true
target = "x86_64-pc-windows-gnu"
linker = "x86_64-w64-mingw32-gcc"
