[workspace]
resolver = "3"
members = ["wslpluginapi-sys", "xtask"]
default-members = ["wslpluginapi-sys"]


[workspace.package]
name = "wslpluginapi-sys"
version = "0.1.0-beta.3+2.1.3"
edition = "2021"
readme = "README.md"
authors = ["Mickaël Véril <mika.veril@wanadoo.fr>"]
description = "Rust bindings for the WSL Plugin API"
license = "MIT"
repository = "https://github.com/mveril/wslpluginapi-sys"
