[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["now"] }
clap = { version = "4.0", features = ["derive"] }
cargo_metadata = "0.20"
reqwest = { version = "0.12", features = ["blocking"] }
tempfile = "3.19"
zip = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.8"
spdx = { version = "0.10", features = ["text"] }
log = "0.4"
env_logger = "0.11"
clap-verbosity-flag = "3.0"
anyhow = "1.0"
regex = { version = "1.11", features = ["use_std"] }
thiserror = "2.0"
markdown-builder = "1.0"
walkdir = "2.5"
