[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
quick-xml = { version = "0.37", features = ["serialize"] }
spdx = { version = "0.10", features = ["text"] }
clap = { version = "4.0", features = ["derive"] }
cargo_metadata = "0.20"
reqwest = { version = "0.12", features = ["blocking"] }
tempfile = "3.19"
zip = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
clap-verbosity-flag = "3.0"
anyhow = "1.0"
regex = { version = "1.11", features = ["use_std"] }
markdown-builder = "1.0"
walkdir = "2.5"
bindgen = "0.72"
cfg-if = "1.0"
constcat = "0.6"

[build-dependencies]
cargo-lock = "10.1"

[target.'cfg(unix)'.dependencies]
cow-utils = { version = "0.1" }
